# NMAI

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/nmia/: bootstrap.py  main.py  seed.py  settings.py
api/src/nmia/auth/: models.py  rbac.py  routes.py  security.py
api/src/nmia/connectors/: jobs.py  models.py  registry.py  routes.py  scheduler.py  schemas.py  secrets.py
api/src/nmia/core/: audit.py  crud.py  db.py  models.py  schemas.py
api/src/nmia/enclaves/: routes.py  schemas.py
api/src/nmia/ingestion/: correlate.py  identities.py  identity_schemas.py  normalize.py  risk.py  routes.py  schemas.py
api/src/nmia/reports/: routes.py  schemas.py
api/src/nmia/users/: routes.py  schemas.py
api/src/nmia/util/: cron.py  hashing.py  logging.py
api/tests/: conftest.py  test_auth.py  test_bootstrap.py  test_connectors.py  test_ingest_adcs.py  test_rbac.py  test_seed.py
collector-windows/: Dockerfile  pyproject.toml
collector-windows/scripts/: install-service.ps1  run-local.ps1  uninstall-service.ps1
collector-windows/src/nmia_collector/: auth.py  main.py  routes.py  settings.py
collector-windows/src/nmia_collector/adcs/: export_inventory.py  fetch_cert_blob.py  parse_san.py  push_to_nmia.py
collector-windows/src/nmia_collector/jobs/: runner.py  store.py
ui/: index.html  (+2 more)
worker/: Dockerfile  pyproject.toml
worker/src/nmia_worker/: main.py  scheduler.py  tasks.py
worker/src/nmia_worker/connectors/ad/: collector.py  normalizer.py
worker/src/nmia_worker/pipeline/: correlate.py  normalize.py  risk.py
(+28 files in other folders)
