[project]
name = "nmia-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "apscheduler>=3.10",
    "ldap3>=2.9",
    "cryptography>=42.0",
    "httpx>=0.27",
    "pydantic-settings>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
